# codebase-understanding

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: code_parser.py  main.py  utils.py
src/components/: code_parser.py  document_cleaner.py  document_writer.py  llm.py  qdrant.py
src/core/: pipeline.py  provider.py
src/pipelines/: indexing.py
src/pipelines/indexing/: __init__.py  code_class_indexing.py  code_file_indexing.py  code_function_indexing.py  code_parsing.py
src/pipelines/retrieval/: __init__.py  codebase_retrieval.py
src/providers/document_store/: __init__.py  qdrant.py
src/providers/embedder/: openai.py
src/providers/llm/: openai.py
src/utils/: __init__.py  llm.py  qdrant.py
tests/: test_code_parser.py
tests/examples/: test.py
