[tool.poetry]
name = "code-understanding-assistant"
version = "0.1.0"
description = ""
authors = ["ChihYu Yeh <chihyu.jimmy.yeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tree-sitter = "^0.23.2"
tree-sitter-python = "^0.23.4"
qdrant-client = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
